<resources>

    <string name="app_name">Clipboard Share</string>
    <string name="twitter_consumer_key">7wrxkCDqlXDR0KKxRlClvi6i1</string>
    <string name="twitter_consumer_secret">U5MZojnzBZBgPkwBT3QMzRMi51GXi7vEDKK1pAFxURMGqEqJGH</string>
    <string name="twitter_callbackUrl">https://clipboardshare.android.app</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="menu_twitter_account_manage">Twitter Account</string>
    <string name="menu_google_account_manage">Google Account</string>
    <string name="menu_delete_all">Remove All</string>
    <string name="menu_about">About</string>
    <string name="main_copied">\s messages are copied.</string>
    <string name="main_start">Share it!</string>
    <string name="no_copied">No messages copied.</string>
    <string name="not_logged_in">You are not logged in.</string>
    <string name="question_before_share">Do you want to share your messages?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied">Copied.</string>
    <string name="activated">Activated.</string>
    <string name="inactivated">Deactivated.</string>
    <string name="twitter_logout">Twitter logout</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="google_logout">Google Sign Out</string>
    <string name="google_login">Google Login</string>
    <string name="question_before_logout">Are you sure to sign out?</string>
    <string name="logged_out">You have been signed out.</string>
    <string name="question_before_remove_all">Are you sure to delete all?</string>
    <string name="removed_all">All deleted.</string>
    <string name="twitter_logged_in">You are logged in to Twitter.</string>
    <string name="google_logged_in">You are logged in to Google Plus.</string>
    <string name="shared_all">All messages have been shared.</string>
    <string name="shortcut_app">Application shortcut</string>
    <string name="question_before_remove">Are you sure to delete?</string>
    <string name="removed">Removed.</string>
    <string name="shared_twitter">Shared on Twitter.</string>
    <string name="network_login_check">Please connect to the network and check your login status.</string>

    <string name="help">
        Please activate by pressing the switch at the top right.\n
        After activating the app, copy the desired text and it will be added to the screen below.\n
        After copying all the text, click the Start sharing button and the copied message will be shared through the logged in account.\n
        Sign-in can be done from the Manage Accounts menu button in the top right.\n
        Please press "Select apps" button and select the apps to share on.
        The device must be connected to the network before sharing.\n
        You can view the entire contents by pressing briefly on the copied text, or you can delete it by pressing and holding.\n
        Please disable the app by pressing the switch after use.
    </string>

    <string name="none"> </string>
    <string name="app_info">Application Information</string>
    <string name="rate_me_title">Rate me</string>
    <string name="email_me_title">Email me</string>
    <string name="open_source_title">Open Source</string>
    <string name="rate_me_summary">play.google.com</string>
    <string name="email_me_summary">naver.com</string>
    <string name="open_source_summary">github.com</string>
    <string name="email_address">lunar456th@naver.com</string>
    <string name="on_sharing_twitter">Sharing on Twitter… </string>
    <string name="on_sharing_google_plus">Sharing on Google Plus… </string>
    <string name="package_name_twitter">com.twitter.android</string>
    <string name="package_name_google_plus">com.google.android.apps.plus</string>
    <string name="app_not_installed_google_plus">You need a Google Plus application. Please install from the Google Play Store.</string>
    <string name="hello">Hi!</string>
    <string name="version">Version</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="please_select_app">Select the apps to share on from the \'choose apps\' button.</string>
    <string name="select_app">Select apps</string>
    <string name="app_to_share_on">Select apps to share on</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set">Configured.</string>
    <string name="please_login_twitter">Sign in to Twitter.</string>
    <string name="toggle_switch">Switch</string>
    <string name="excluded_from_sharing">Messages longer than 140 characters were excluded from sharing.</string>
    <string name="no_login_account">No accounts signed in.</string>
    <string name="long_click_to_remove">Long press to delete</string>
    <string name="add_account">Add account</string>
    <string name="del_account_all">Delete all</string>
    <string name="select_sharing_account">Select accounts to share with</string>
    <string name="menu_select_account">Accounts On/Off</string>
    <string name="select_twitter_account">Please select accounts at \'Accounts On/Off\'</string>

</resources>
