<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="7dp"
        android:background="@drawable/layout_round">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/button_start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="2dp"
                android:textSize="16sp"
                android:text="@string/help" />
        </ScrollView>


        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:text="@string/main_start"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:theme="@style/MyButton"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/background_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/image_background"
            android:src="@drawable/ic_bg"
            android:scaleType="centerInside"
            android:background="@color/background"
            android:layout_centerInParent="true"
            android:contentDescription="@string/none"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"/>
    </FrameLayout>

</LinearLayout>